Fix day buttons spacing

--- a/src/web/src/style/main.scss
+++ b/src/web/src/style/main.scss
@@ -177,7 +177,7 @@ button {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 17px 5px 10px 0;
+    padding: 17px 0 10px 0;
     margin-bottom: -15px;
     background-color: #8F1919;
 }
@@ -192,7 +192,7 @@ button {
     background-color: whitesmoke;
     color: black;
     display: inline-block;
-    margin: 0 10px 10px 0;
+    margin: 0 5px 10px 5px;
     display: flex;
     justify-content: center;
     align-items: center;
